2011-09-28 v0.5:
	 * Upgraded dependencies. NHibernate < 3.2 will no longer be tested.
	 * Missed ref for sample project, fixed that, so that's 0.5.1, no 0.5.0, soz.
2011-09-28:
	 * Upgraded to v3.0.202 of Castle.Transactions (Tx + AutoTx)
	 * Removed dependency on log4net.

2011-08-23:
	 * Default lifestyle for ISession and IStatelessSession is now PerTopTransaction.
	 * Each recursion/dependent transaction started/voted to complete Flushes the ISession/IStatelessSession
	unless FlushMode.Never is set.
	 * Forked transactions generate new instances, i.e. they behave like PerTransaction lifestyle does with
	 recursion/dependent transactions.
	 * IStatelessSessions are now possible to resolve in all three lifestyles
	 * Made DefaultSessionLifeStyleOption an enum of backing type uint instead of int