@@ -1,6 +1,7 @@
 framework: >= net40
 source https://nuget.org/api/v2
 
+nuget NuGet.CommandLine
 nuget Castle.Core
 nuget Castle.Core-NLog
 nuget Castle.Facilities.AutoTx
@@ -15,6 +16,10 @@ nuget NHibernate.Mapping.Attributes
 nuget NLog
 nuget NUnit
 nuget SQLitex64
+nuget EntityFramework
 nuget System.Data.SQLite
+nuget System.Data.SQLite.Core
+nuget System.Data.SQLite.EF6
+nuget System.Data.SQLite.Linq
 nuget Topshelf
 nuget Topshelf.NLog
