@@ -10,4 +10,8 @@ Iesi.Collections
 NHibernate
 NLog
 NUnit
+EntityFramework
 System.Data.SQLite
+System.Data.SQLite.Core
+System.Data.SQLite.EF6
+System.Data.SQLite.Linq
