@@ -1,3 +1,4 @@
+NuGet.CommandLine
 Castle.Core
 Castle.Facilities.AutoTx
 Castle.FactorySupportFacility
